# parallel-minimum-interval-covering

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_interval_covering.cpp  benchmark_parallel_breakdown.cpp  benchmark_thread_scaling.cpp
docs/: GENERATE_INTERVALS.md  WORK_SUMMARY.md
docs/plans/: 2026-01-02-unify-generate-intervals.md  2026-01-04-benchmark-scripts-refactor-design.md
include/: interval_covering.h  interval_covering_euler.h  macro.h  test_utils.h
tests/: debug_comparison.cpp  debug_scan_hang.cpp  test_generate_intervals.cpp  test_interval_covering.cpp  test_simple_scan.cpp
tools/: bench_parallel_breakdown.sh  benchmark_config.sh  plot_parallel_breakdown.py  plot_thread_scaling.py  run_parallel_breakdown.sh  run_thread_scaling.sh
